--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@slidev/types": "^52.1.0"
   },
   "devDependencies": {
+    "@release-it/conventional-changelog": "^10.0.1",
     "@slidev/cli": "^52.1.0",
     "@storyblok/eslint-config": "^0.4.1",
     "release-it": "^19.0.4",
