--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "slidev-theme-joyful-theme",
+  "name": "slidev-theme-joyful",
   "type": "module",
   "version": "0.0.0",
   "keywords": [
